syntax = "proto3";
package ETModel;

message Actor_GetTulipPriceLevel_Ntt // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int32 redPriceLevel=1;
	int32 whitePriceLevel=2;
	int32 yellowPriceLevel=3;
}

//郁金香牌类消息
message TulipCard
{
	int32 TulipCardLevel = 1;
	int32 TulipCardColor = 2;
	int32 TulipCardWeight = 3;
}
//郁金香牌类消息
message CollectorTulipCard
{
	int32 TulipCardLevel = 1;
	int32 TulipCardWeight = 2;
}
//收藏家牌类消息
message CollectorCard
{
	int32 RequestColor = 1;
	repeated CollectorTulipCard CollectorTulipCard = 2;
}
//牌长度消息
message GamerCardNum
{
    int64 UserID = 1;
    int32 Num = 2;
}
//初始时房间牌
message Actor_GameStartRoomCards_Ntt // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	repeated TulipCard FutureTulipCards = 1;
	repeated TulipCard CashTulipCards = 2;
}

message Actor_GameStartMention // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 9;
}
//获取房间内玩家信息请求
message C2G_GetUserInfoInRoom_Req // IRequest
{
	int32 RpcId = 90;
	int64 UserID = 1;
}
//获取房间内玩家信息返回
message G2C_GetUserInfoInRoom_Back // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string NickName = 1;
	int32 Wins = 2;
	int32 Loses = 3;
	int64 Rank = 4;
}
//----ET
message Actor_Test // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	string Info = 1;
}

message C2M_TestRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	string request = 1;
}

message M2C_TestResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string response = 1;
}

message Actor_TransferRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int32 MapIndex = 1;
}

message Actor_TransferResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message C2G_EnterMap // IRequest
{
	int32 RpcId = 90;
}

message G2C_EnterMap // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	int64 UnitId = 1;
	repeated UnitInfo Units = 2;
}

message UnitInfo
{
	int64 UnitId  = 1;

	float X = 2;
	float Y = 3;
	float Z = 4;
}

message M2C_CreateUnits // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
    repeated UnitInfo Units = 1;
}

message Frame_ClickMap // IActorLocationMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int64 Id = 94;
	
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message M2C_PathfindingResult // IActorMessage
{
	int64 ActorId = 93;
	
	int64 Id = 1;

	float X = 2;
	float Y = 3;
	float Z = 4;
	
	repeated float Xs = 5;
	repeated float Ys = 6;
	repeated float Zs = 7;
}


message C2R_Ping // IRequest
{
	int32 RpcId = 90;
}

message R2C_Ping // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message G2C_Test // IMessage
{
}

message C2M_Reload // IRequest
{
	int32 RpcId = 90;
	string Account = 1;
	string Password = 2;
}

message M2C_Reload // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}